# task-06---threads-AmitaiShmeeda

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  Consumer.h  Message.h  Producer.h  SafeQueue.h
src/: CMakeLists.txt  Consumer.cpp  Message.cpp  Producer.cpp  main.cpp
